--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-This is my site
+# This is my site
+
+Hello and welcome to my beautiful website. It is all about me. And that's okay, because I want to tell the world about myself. And so be it. 
